src/test/deca/context/invalid/protected-notSubType.deca
class A{
    protected Object o;
}

class B{
    A a = new A();
    void method(){
        a.o;
    }
}
